--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "ejs": "2.3.4",
+    "forever": "^0.15.3",
     "gm": "^1.23.0",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
