--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "ejs": "2.3.4",
     "forever": "^0.15.3",
+    "format-currency": "^1.0.0",
     "gm": "^1.23.0",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -25,7 +26,8 @@
     "machinepack-passwords": "^2.3.0",
     "rc": "1.0.1",
     "sails": "~0.12.11",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "swig": "^1.4.2"
   },
   "scripts": {
     "debug": "node debug app.js",
