--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "rc": "1.0.1",
         "sails": "~0.12.11",
         "sails-disk": "~0.10.9",
+        "sails-mysql": "0.11.5",
         "swig": "^1.4.2"
     },
     "scripts": {
